--- a/daw/fol/fol_Tres.html
+++ b/daw/fol/fol_Tres.html
@@ -292,23 +292,106 @@
             <h4 class="apartado">3.6.5.- Otros tipos de relación contractual</h4>
             <p>El <b>contrato de puesta a disposición</b> se lleva a cabo entre la empresa de trabajo temporal y la empresa usuaria. Tiene por objeto la cesión del trabajador par aprestar servicios en la empresa usuaria, a cuyo poder de dirección quedará sometido. Se deberán formalizar por escrito y los trabajadores contratados para ser cedidos a empresas usuarias tendrán derecho, durante los periodos de prestación de servicios en estas empresas, a la aplicación de las condiciones esenciales de trabajo y empleo que les corresponderían si hubiera sido contratados directamente por la empresa usuaria.</p>
             <p>En este tipo de relaciones laborales, la ETT es quien paga las cotizaciones a la Seguridad Social y el salario al trabajador, que presta sus servicios a la empresa usuaria.</p>
-
+            <p>El contrato entre la ETT y el trabajador para prestar servicios en empresas usuarias podrá concertarse bajo cualquiera de los cuatro tipo de contratos.</p>
+            <p>No se podrán celebrar contratos de puesta a disposición en unos determinados supuestos.</p>
+            <p><b>Contratos celebrados con determinados colectivos:</b> Debido a la diversidad en la sociedad, es necesario que ciertos colectivos, ya sea por sus necesidades especiales, por sus circustancias personales concretas o por circustancias específicas del puesto de trabajo, deben contar con una regulación específica que les permita gozar de un grado de protección con el que desempeñar correctamente su relación laboral.</p>
+            <p>Cualquier modalidad de contrato puede celebrarse con alguno de estos colectivos especialmente protegidos, siempre que concurran unos determinados requisitos establecidos en las leyes. Deberán respetar la normativa laboral, pero teniendo en cuenta sus especificidades.</p>
+            <p>Podemos destacar los contratos celebrados con personas con discapacidad, con capacidad intelectual límite, desempleadas de larga duración, trabajadores en situación de exclusión social, que tengan acreditada por la administración competente la condición de víctima de violencia de género doméstica, víctima del terrorismo o víctima de trata de seres humanos, trabajadores del servicio del hogar familiar y trabajadores de alta dirección.</p>
+            <p><b>Contrato a tiempo parcial:</b> Cuando el trabajador presta unos servicios a la empresa durante un periodo de tiempo inferior a una jornada completa. Es de aplicación para cualquiera de los cuatro tipos.</p>
+            <p>Debe realizarse por escrito, donde debe figurar el número de horas ordinarias de trabajo al día, a la semana, al mes o al año contratadas y su distribución. De no observarse estas exigencias, el contrato se presumirá celebrado a jornada completa, salvo prueba que acredite el carácter parcial de los servicios.</p>
+            <p>Los trabajadores a tiempo parcial no podrán realizar horas extraordinarias, a no ser que exista un exceso de horas trabajadas para prevenir o reparar siniestros y otros daños extraordinarios y urgentes.</p>
+            <p>Para cambiar un contrato parcial a jornada completa, el trabajador siempre podrá acogerse o no de forma voluntaria, y no se podrá imponer de forma unilateral o como consecuencia de una modificación sustancial de condiciones de trabajo. No podrá ser despedido ni sufrir ningún otro tipo de sanción o efecto perjudicial por el hecho de rechazar esta conversión.</p>
             <div class="menuOpcional">
                 <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="subSiete">Las condiciones de trabajo: tiempo, conciliación laboral y familiar</h3>
-          
+            <h3 class="subTitulo" id="subSiete">3.7.- Las condiciones de trabajo: tiempo, conciliación laboral y familiar</h3>
+            <p>En el ET, en el convenio aplicable a la relación laboral y en determinadas normas específicas para sectores concretos con jornadas especiales, aparecen reguladas las condiciones de trabajo y la jornada laboral.</p>
+            <div class="nota">La jornada de trabajo es aquel periodo de tiempo durante el cual el trabajador está obligado a desarrollar su prestación laboral para el empresario. <br>
+            La jornada de trabajo marca los límites dentro de los cuales es exigible esta prestación y, por lo tanto, delimita el tiempo del ejercicio de los poderes empresariales.</div>
+            <h4 class="apartado">3.7.1.- La jornada de trabajo, los descansos</h4>
+            <p>La duración máxima legal de una jornada de trabajo es de una media de 40 horas de trabajo efectivo a la semana en cómputo anual, pudiéndose pactar semanas de menos horas y otras de más, pero siempre respetando el descanso mínimo diario y semanal del trabajador.</p>
+            <p>La duración máxima al día, es de 9 horas de trabajo efectivo, a no se que se haya pactado en negociación colectiva una distribución irregular, siempre y cuando se respete la jornada máxima legal y los límites entre jornadas de 12 horas. Los menores de 18 años no pueden trabajar más de 8 horas al día, incluyendo las de formación.</p>
+            <p>Existen actividades y sectores con una serie de peculiaridades que requieren ampliaciones y reducciones de las jornadas de trabajo. Jornadas especiales.</p>
+            <p>Los <b>descansos mínimos</b> diarios y semanales deben respetarse siempre. Los convenios colectivos y el ET contemplan:</p>
+            <ul>
+                <li><b>Descansos:</b>
+                    <ul>
+                        <li><b>En la propia jornada:</b> cuando el horario de trabajo sea continuado y exceda de 6 horas, es obligatorio establecer un periodo mínimo de descanso de 15 minutos durante la jornada. Para los trabajadores menores de 18 años, el tiempo mínimo de descanso será de 30 minutos y es obligatorio establecerlo cuando la jornada continuada exceda de 4 horas y media.</li>
+                        <li><b>Entre jornadas:</b> entre la finalización de una jornada y el inicio de la siguiente deben transcurrir como mínimo 12 horas</li>
+                    </ul>
+                </li>
+                <li><b>Semanalmente:</b> el trabajador tiene derecho a un día y medio ininterrumpido de descansos semanal, acumulable por periodos de 14 días. Los trabajadores menores de 18 años tienen derecho a dos días ininterrumpidos de descanso semanal.</li>
+                <li>Todo trabajador tiene derecho a disfrutar de un <b>periodo de vacaciones</b> no inferior a 30 días naturales, incluyendo festivos y domingos, por cada año natural trabajado, del 1 de enero al 31 de diciembre. Las fechas se pactan entre empresa y trabajador y hay convenios que establecen más días de vacaciones, pero nunca menos de 30 días. El trabajador está en su derecho de conocer las fechas de sus vacaciones con una antelación mínima de dos meses. Si las vacaciones coinciden con un periodo de incapacidad temporal o cualquier permiso retribuido, se tiene derecho a disfrutarlas en otro momento, aunque sea fuera del año natural. A la extinción de un contrato, las vacaciones no disfrutadas deberán ser liquidadas económicamente. Las vacaciones no se pueden compensar por dinero, únicamente se pueden compensar por dinero cuando se extinga la relación laboral.</li>
+            </ul>
+            <p>Se consideran horas extraordinarias a las que se trabajan cuando la jornada máxima que recoge el convenio o el ET se ve superada. El empresario está obligado a registrarlas y comunicarlas al trabajador y al representante de los trabajadores. Existen dos tipos:</p>
+            <ul>
+                <li><b>Estructurales:</b> aquellas que se realizan para satisfacer las necesidades de la empresa</li>
+                <li><b>De fuerza mayor:</b> obligatorias y necesarias para reparar o prevenir un daño que se pueda producir sobre las personas o sobre la propia empresa. Un terremoto o un incendio pueden ser considerados casos de fuerza mayor</li>
+            </ul>
+            <p>Deben ser recompensadas con dinero o con descansos. En ningún caso pueden superar las 80 al año, sin contar las compensadas con descansos o las consideradas de fuerza mayor. No pueden hacer horas extraordinarias los menores de 18 años, las trabajadoras con jornada reducida por nacimiento o cuidado de un menor, los trabajadores nocturnos ni los trabajadores a tiempo parcial.</p>
+            <p>El trabajador puede solicitar una <b>reducción de la jornada de trabajo</b>.</p>
+            <ul>
+                <li><b>Permiso por cuidado del lactante:</b> pueden disfrutarlo ambos progenitores y lo paga la empresa, no la Seguridad Social ni la Mutua. Puede durar hasta que el hijo cumpla 9 meses, tanto si la lactancia es natural como artificial y se puede disfrutar de 3 maneras:
+                    <ul>
+                        <li>Permiso para ausentarse 1 hora al día</li>
+                        <li>Dividir en dos fracciones esta hora y reducir la jornada media hora al principio o al final de la jornada</li>
+                        <li>O acumular las horas de este permiso para conseguir jornadas completas</li>
+                    </ul>
+                </li>
+                <li><b>Guarda legal:</b> los trabajadores que tengan a su cargo menores de 12 años, discapacitados físicos, psíquicos o sensoriales que no puedan hacer un trabajo remunerado o un familiar de hasta segundo grado totalmente depediente y que no pueda trabajar, pueden acogerse a una reducción de jornada y de salario de entre una octava parte y la mitad</li>
+                <li><b>Hospitalización de recién nacidos:</b> el padre o la madre de un bebé recién nacido que requiere hospitalización después del parto puede acogerse a una reducción de jornada (y de salario) de entre una y dos horas</li>
+                <li><b>Violencia de género:</b> una trabajadora víctima de la violencia de género tiene derecho a reducir su jornada (con reducción proporcional de salario) para poder recibir asistencia social o simplemente por protección. Para poder acogerse a esta reducción, debe presentarse una orden de protección emitida por un juez o un informe del ministerio fiscal. Por esta misma causa, también pueden reducir su jornada laboral las víctimas de terrorismo</li>
+                <li><b>Por regulación de ocupación:</b> si un empresario está autorizado a iniciar un procedimiento de regulación de empleo por causas económicas, técnicas, organizativas o de producción, puede proceder a reducir la jornada y el salario de los trabajadores entre un mínimo del 10% y un máximo del 70%. El trabajador puede entonces pasar a la situación de desocupación parcial</li>
+            </ul>
+            <h4 class="apartado">3.7.2.- El trabajo nocturno y por turnos</h4>
+            <p>Se considera trabajo nocturno el que se realiza desde las 10 de la noche hasta las 6 de la mañana siguiente, y como trabajador nocturno, aquel que, como mínimo, 3 horas de su jornada diaria (o una tercera parte de sus horas anuales) discurren en este horario. No la pueden realizar menores de 18 años.</p>
+            <p>No pueden hacer horas extraordinarias y su jornada diaría no pueden ser de más de 8 horas de media durante un periodo de 15 días.</p>
+            <p>En el <b>trabajo a turnos</b>, un mismo puesto de trabajo es ocupado por distintos trabajadores a lo largo de las 24 horas del día, es decir, un trabajador desempeña su jornada laboral en un puesto de trabajo y, cuando este trabajador finalice su jornada, otro trabajador ocupará este puesto al comenzar su jornada laboral.</p>
+            <p>No se puede trabajar más de dos semanas en turno de noche, si no se ha solicitado. Los trabajadores que cursen estudios tendrán preferencia a la hora de escoger un turno.</p>
+            <h4 class="apartado">3.7.3.- El calendario laboral</h4>
+            <p>Cada año se elabora el calendario laboral, un documento en el que se incluyen los descansos semanales o entre jornadas, el horario de trabajo, las vacaciones anuales y los días festivos.</p>
+            <p>El horario de trabajo queda fijado a través del convenio colectivo o del contrato individual, y puede ser rígido o flexible. Sobre los días festivos, el trabajador tiene derecho a no más de 14 días festivos al año, de los cuales dos corresponden a las festividades locales fijadas por el ayuntamiento.</p>
+            <p>El calendario de fiestas lo aprueba el Gobierno, cada comunidad autónoma fija sus festividades, sí deben respetarse siempre son los festivos nacionales:</p>
+            <ul>
+                <li>1 de enero (Año Nuevo)</li>
+                <li>6 de enero (Epifania del Señor)</li>
+                <li>Viernes Santo</li>
+                <li>1 de mayo (Fiesta del Trabajo)</li>
+                <li>15 de agosto (Asunción de la Virgen)</li>
+                <li>12 de octubre (Día de la Hispanidad)</li>
+                <li>1 de noviembre (Día de Todos los Santos)</li>
+                <li>6 de diciembre (Día de la Constitución española)</li>
+                <li>8 de diciembre (Inmaculada Concepción)</li>
+                <li>25 de diciembre (Natividad del Señor)</li>
+            </ul>
+            <h4 class="apartado">3.7.4.- Los permisos retribuidos</h4>
+            <p>Existen una serie de circustancias por las que el trabajador puede ausentarse del trabajo sin perder la remuneración, previo aviso y presentando la debida justificación. Aunque cada convenio colectivo puede mejorarlo, los días de permiso y los motivos que se contemplan por ley son los siguientes:</p>
+            <ul>
+                <li><b>Matrimonio o inscripción como pareja de hecho:</b> 15 días naturales. Solo podrán disfrutar de este permiso si su convenio colectivo de aplicación reconoce este permiso</li>
+                <li><b>Exámenes prenatales y cursos de preparación al parto:</b> el tiempo indispensable</li>
+                <li><b>Lactancia de niño de menos de nueve meses de edad:</b> una hora diaria o dos medias horas a disfrutar durante la jornada laboral. Puede ser sustituible por la reducción de jornada correspondiente</li>
+                <li><b>Nacimiento u hospitalización de hijo prematuro:</b> una hora de ausencia en el trabajo, sustituible por la reducción de jornada de hasta dos horas</li>
+                <li><b>Cumplimiento de un deber inexcusable de carácter público y personal:</b> el tiempo indispensable</li>
+                <li><b>Traslado de domicilio habitual:</b> un día</li>
+                <li><b>Búsqueda de trabajo en caso de que el contrato se haya extinguido por causas objetivas:</b> seis horas semanales de las que se puede disfrutar durante el tiempo de preaviso (15 días)</li>
+                <li><b>Representación de los trabajadores:</b> horas mensuales fijadas en proporción al número de representantes</li>
+                <li><b>Nacimiento de un hijo:</b> este permiso ha sido derogado (con efectos desde el 1 de mayo de 2019) y solo rige (2 días o 4 si comporta desplazamiento) si así lo recoge el convenio colectivo de aplicación</li>
+                <li><b>Enfermedad grave o accidente de un familiar de hasta segundo grado: dos días (cuatro si comporta desplazamiento)</b></li>
+                <li><b>Hospitalización de un familiar de hasta segundo grado:</b> dos días (cuatro si comporta desplazamiento)</li>
+                <li><b>Intervención quirúrgica sin hospitalización que requiera reposo domiciliario de un familiar de hasta segundo grado:</b> dos días (cuatro si comporta desplazamiento)</li>
+                <li><b>Defunción de familiar de hasta segundo grado:</b> dos días (cuatro si comporta desplazamiento)</li>
+            </ul>
             <div class="menuOpcional">
                 <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
                 <a href="#subUno"><div class="botonO">Arriba</div></a>
             </div>
             <!--*********************************************************************-->
-            <h3 class="subTitulo" id="subOcho">Interpretación del recibo del salario</h3>
-          
+            <h3 class="subTitulo" id="subOcho">3.8.- Interpretación del recibo del salario</h3>
+            <!-- pág 82 -->
             <div class="menuOpcional">
                 <a href="../dAw.html"><div class="botonO">Índice</div></a>
                 <a href="../../index.html"><div class="botonO">Principal</div></a>
